adds milestone 2 task 2

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 *.csv
+*1987.ipynb
+*1989.ipynb
+*1990.ipynb
+*1991.ipynb
+*1992.ipynb
+*1993.ipynb
+*1994.ipynb
+*1995.ipynb
+*1996.ipynb
+*MasterDF.ipynb
+
